fix nav + hide logo when screen too small

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -5,9 +5,10 @@
 	text-decoration: none;
 }
 #page{
-	height: 100%;
+	height: 200%;
 	width: 100%;
 	transition: all 0.3s ease-in-out;
+	position: relative;
 
 }
 body{
@@ -19,6 +20,7 @@ body{
 	width: 100%;
 	padding: 10px 0;
 	transition: all 0.3s;
+	background-color: seagreen;
 }
 .container{
 	margin: 0 5em;
@@ -58,10 +60,10 @@ body{
 	transition: .5s;
 }
 .checkbtn{
-	padding: 0 0.5em;
+	padding: 40px 2px;
 	line-height: 7vh;
-	height: 7vh;
-	width: 7vh;
+	height: 4em;
+	width: 4em;
 	float: right;
 	border-radius: 3px;
 	cursor: pointer;
@@ -75,16 +77,16 @@ body{
 }
 .checkbtn-burger{
 	background-color: white;
-	width: 4vh;
-	height: 6px;
+	width: 4vw;
+	height: 1vw;
 	border-radius: 5px;
 	transition: all .3s ease-in-out;
 }
 .checkbtn-burger::before,.checkbtn-burger::after{
 	content: '';
 	position: absolute;
-	width: 4vh;
-	height: 6px;
+	width: 4vw;
+	height: 1vw;
 	background-color: white;
 	border-radius: 5px;
 	transition: all .3s ease-in-out;
@@ -149,7 +151,9 @@ section{
 }
 @media (max-width: 805px){
 	.logo-img{
-		width: 100px;
+		width: 10em;
+		height: 5em;
+		position: relative;
 	}
 	.container{
 		margin-left: 2em;
@@ -192,5 +196,10 @@ section{
 	}
 	.checkbtn:hover{
 		background-color: #999999;
+	}
+}
+@media (max-width: 300px){
+	.logo-img{
+		display: none;
 	}
 }
